--- a/pages/academico/niveis.html
+++ b/pages/academico/niveis.html
@@ -973,6 +973,10 @@
           </header>
           <div class="card-block">
             <div class="row">
+              <div class="col-md-2">
+                <label class="form-label semibold">Situação</label>
+                <p class="semibold text-success">Ativo</p>
+              </div>
               <div class="col-md-4">
                 <label class="form-label semibold">Quantidade de unidades avaliativas</label>
                 <p>0000</p>
@@ -985,15 +989,11 @@
                 <label class="form-label semibold">Certificado</label>
                 <p>Sim</p>
               </div>
-              <div class="col-md-2">
-                <label class="form-label semibold">Situação</label>
-                <p class="semibold text-success">Ativo</p>
-              </div>
             </div>
           </div>
         </section>
 
-        <section class="card card-default mt-lg">
+        <section class="card card-default mt-md">
           <header class="card-header">
             <h5 class="semibold"><i class="fa fa-book mr-xs" aria-hidden="true"></i> Materiais didáticos</h5>
           </header>
