--- a/pages/posto/unidade.html
+++ b/pages/posto/unidade.html
@@ -142,101 +142,101 @@
                         <th>Unidade</th>
                         <th>Responsável pedagógico</th>
                         <th>Telefone principal</th>
-                        <th>Status</th>
+                        <th>Situação</th>
                         <th class="text-right">Ações</th>
                       </tr>
                       </thead>
                       <tbody>
 
                       <tr>
-	                        <td><strong><a data-toggle="modal" data-target="#ModalDetalhaUnidade"
-	                                       href="#ModalDetalhaPosto">Águas Claras</a></strong></td>
-	                        <td>Vânia Rodrigues</td>
-	                        <td>(61) 3442-5757</td>
-	                        <td>Ativo</td>
-	                        <td>
-	                          <div class="pull-right">
-	                            <a class="btn btn-default-outline btn-sm" href="unidade--editar.html">
-	                              <i class="fa fa-pencil-square-o mr-xs" aria-hidden="true"></i> Editar
-	                            </a>
-	                          </div>
-	                        </td>
-	                      </tr>
+                        <td><strong><a data-toggle="modal" data-target="#ModalDetalhaUnidade"
+                                       href="#ModalDetalhaPosto">Águas Claras</a></strong></td>
+                        <td>Vânia Rodrigues</td>
+                        <td>(61) 3442-5757</td>
+                        <td>Ativo</td>
+                        <td>
+                          <div class="pull-right">
+                            <a class="btn btn-default-outline btn-sm" href="unidade--editar.html">
+                              <i class="fa fa-pencil-square-o mr-xs" aria-hidden="true"></i> Editar
+                            </a>
+                          </div>
+                        </td>
+                      </tr>
 
-	                      <tr>
-	                        <td><strong><a data-toggle="modal" data-target="#ModalDetalhaUnidade"
-	                                       href="#ModalDetalhaPosto">Asa norte</a></strong></td>
-	                        <td>Cláudio Azevedo</td>
-	                        <td>(61) 3442-5599</td>
-	                        <td>Ativo</td>
-	                        <td>
-	                          <div class="pull-right">
-	                            <a class="btn btn-default-outline btn-sm" href="unidade--editar.html">
-	                              <i class="fa fa-pencil-square-o mr-xs" aria-hidden="true"></i> Editar
-	                            </a>
-	                          </div>
-	                        </td>
-	                      </tr>
+                      <tr>
+                        <td><strong><a data-toggle="modal" data-target="#ModalDetalhaUnidade"
+                                       href="#ModalDetalhaPosto">Asa norte</a></strong></td>
+                        <td>Cláudio Azevedo</td>
+                        <td>(61) 3442-5599</td>
+                        <td>Ativo</td>
+                        <td>
+                          <div class="pull-right">
+                            <a class="btn btn-default-outline btn-sm" href="unidade--editar.html">
+                              <i class="fa fa-pencil-square-o mr-xs" aria-hidden="true"></i> Editar
+                            </a>
+                          </div>
+                        </td>
+                      </tr>
 
-	                      <tr>
-	                        <td><strong><a data-toggle="modal" data-target="#ModalDetalhaUnidade"
-	                                       href="#ModalDetalhaPosto">Asa sul</a></strong></td>
-	                        <td>Elizabeth Rabello</td>
-	                        <td>(61) 3442-5501</td>
-	                        <td>Ativo</td>
-	                        <td>
-	                          <div class="pull-right">
-	                            <a class="btn btn-default-outline btn-sm" href="unidade--editar.html">
-	                              <i class="fa fa-pencil-square-o mr-xs" aria-hidden="true"></i> Editar
-	                            </a>
-	                          </div>
-	                        </td>
-	                      </tr>
+                      <tr>
+                        <td><strong><a data-toggle="modal" data-target="#ModalDetalhaUnidade"
+                                       href="#ModalDetalhaPosto">Asa sul</a></strong></td>
+                        <td>Elizabeth Rabello</td>
+                        <td>(61) 3442-5501</td>
+                        <td>Ativo</td>
+                        <td>
+                          <div class="pull-right">
+                            <a class="btn btn-default-outline btn-sm" href="unidade--editar.html">
+                              <i class="fa fa-pencil-square-o mr-xs" aria-hidden="true"></i> Editar
+                            </a>
+                          </div>
+                        </td>
+                      </tr>
 
-	                      <tr>
-	                        <td><strong><a data-toggle="modal" data-target="#ModalDetalhaUnidade"
-	                                       href="#ModalDetalhaPosto">Lago Sul</a></strong></td>
-	                        <td>Denise De Felice</td>
-	                        <td>(61) 3442-5630</td>
-	                        <td>Ativo</td>
-	                        <td>
-	                          <div class="pull-right">
-	                            <a class="btn btn-default-outline btn-sm" href="unidade--editar.html">
-	                              <i class="fa fa-pencil-square-o mr-xs" aria-hidden="true"></i> Editar
-	                            </a>
-	                          </div>
-	                        </td>
-	                      </tr>
+                      <tr>
+                        <td><strong><a data-toggle="modal" data-target="#ModalDetalhaUnidade"
+                                       href="#ModalDetalhaPosto">Lago Sul</a></strong></td>
+                        <td>Denise De Felice</td>
+                        <td>(61) 3442-5630</td>
+                        <td>Ativo</td>
+                        <td>
+                          <div class="pull-right">
+                            <a class="btn btn-default-outline btn-sm" href="unidade--editar.html">
+                              <i class="fa fa-pencil-square-o mr-xs" aria-hidden="true"></i> Editar
+                            </a>
+                          </div>
+                        </td>
+                      </tr>
 
-	                      <tr>
-	                        <td><strong><a data-toggle="modal" data-target="#ModalDetalhaUnidade"
-	                                       href="#ModalDetalhaPosto">Sudoeste</a></strong></td>
-	                        <td>Marta Diniz</td>
-	                        <td>(61) 3442-5701</td>
-	                        <td>Ativo</td>
-	                        <td>
-	                          <div class="pull-right">
-	                            <a class="btn btn-default-outline btn-sm" href="unidade--editar.html">
-	                              <i class="fa fa-pencil-square-o mr-xs" aria-hidden="true"></i> Editar
-	                            </a>
-	                          </div>
-	                        </td>
-	                      </tr>
+                      <tr>
+                        <td><strong><a data-toggle="modal" data-target="#ModalDetalhaUnidade"
+                                       href="#ModalDetalhaPosto">Sudoeste</a></strong></td>
+                        <td>Marta Diniz</td>
+                        <td>(61) 3442-5701</td>
+                        <td>Ativo</td>
+                        <td>
+                          <div class="pull-right">
+                            <a class="btn btn-default-outline btn-sm" href="unidade--editar.html">
+                              <i class="fa fa-pencil-square-o mr-xs" aria-hidden="true"></i> Editar
+                            </a>
+                          </div>
+                        </td>
+                      </tr>
 
-	                      <tr>
-	                        <td><strong><a data-toggle="modal" data-target="#ModalDetalhaUnidade"
-	                                       href="#ModalDetalhaPosto">Sudoeste</a></strong></td>
-	                        <td>Márcia Ribeiro</td>
-	                        <td>(61) 3442-5650</td>
-	                        <td>Ativo</td>
-	                        <td>
-	                          <div class="pull-right">
-	                            <a class="btn btn-default-outline btn-sm" href="unidade--editar.html">
-	                              <i class="fa fa-pencil-square-o mr-xs" aria-hidden="true"></i> Editar
-	                            </a>
-	                          </div>
-	                        </td>
-	                      </tr>
+                      <tr>
+                        <td><strong><a data-toggle="modal" data-target="#ModalDetalhaUnidade"
+                                       href="#ModalDetalhaPosto">Sudoeste</a></strong></td>
+                        <td>Márcia Ribeiro</td>
+                        <td>(61) 3442-5650</td>
+                        <td>Ativo</td>
+                        <td>
+                          <div class="pull-right">
+                            <a class="btn btn-default-outline btn-sm" href="unidade--editar.html">
+                              <i class="fa fa-pencil-square-o mr-xs" aria-hidden="true"></i> Editar
+                            </a>
+                          </div>
+                        </td>
+                      </tr>
 
 
                       </tbody>
@@ -327,7 +327,7 @@
                 </div>
               </section>
 
-              <section class="card card-default mt-lg">
+              <section class="card card-default mt-md">
                 <header class="card-header">
                   <h5 class="semibold"><i class="fa fa-commenting mr-xs" aria-hidden="true"></i> Contatos
                   </h5>
@@ -356,59 +356,75 @@
                       </select>
                     </div>
                   </div>
-                  <div class="row mt-md">
-                    <div class="col-sm-7">
-                      <div class="row">
-                        <div class="col-sm-12 mb-md">
-                          <label class="form-label semibold" for=""><i class="fa fa-phone mr-xs" aria-hidden="true"></i>
-                            Telefones</label>
-                        </div>
-                        <div class="col-sm-5">
-                          <label class="form-label semibold" for="">Tipo</label>
-                          <select class="select2 select2-arrow">
-                            <option>Selecione</option>
-                            <option>Principal</option>
-                            <option>Comercial</option>
-                            <option>Outros</option>
-                          </select>
-                        </div>
+                </div>
+              </section>
+              <section class="card card-default mt-md">
+                <header class="card-header">
+                  <h5 class="semibold"><i class="fa fa-phone mr-xs" aria-hidden="true"></i> Telefones
+                  </h5>
+                </header>
+                <div class="card-block">
+                  <div class="row">
+                    <div class="col-sm-12">
+                      <div class="row mt-md">
                         <div class="col-sm-7">
-                          <label class="form-label semibold" for="">Número</label>
-                          <div class="input-group">
-                            <input type="number" class="form-control" placeholder="Número">
+                          <div class="row">
+                            <div class="col-sm-12 mb-md">
+                              <label class="form-label semibold" for="">
+                                Telefones</label>
+                            </div>
+                            <div class="col-sm-5">
+                              <label class="form-label semibold" for="">Tipo</label>
+                              <select class="select2 select2-arrow">
+                                <option>Selecione</option>
+                                <option>Principal</option>
+                                <option>Comercial</option>
+                                <option>Outros</option>
+                              </select>
+                            </div>
+                            <div class="col-sm-7">
+                              <label class="form-label semibold" for="">Número</label>
+                              <div class="input-group">
+                                <input type="number" class="form-control" placeholder="Número">
                         <span class="input-group-btn">
                           <button class="btn btn-success-outline" type="button"><i class="fa fa-plus"
                                                                                    aria-hidden="true"></i>
                           </button>
                         </span>
+                              </div>
+                            </div>
                           </div>
                         </div>
+                        <div class="col-sm-5">
+                          <label class="form-label semibold" for="">Telefones cadastrados</label>
+                          <table class="table">
+                            <thead>
+                            <tr>
+                              <th>Tipo</th>
+                              <th>Número</th>
+                              <th></th>
+                            </tr>
+                            </thead>
+                            <tbody>
+                            <tr>
+                              <td>Principal</td>
+                              <td>(61) 0000-0000</td>
+                              <td><button type="button" class="btn btn-rounded btn-inline btn-danger-outline btn-sm"><i class="fa fa-times" aria-hidden="true"></i></button></td>
+                            </tr>
+                            <tr>
+                              <td>Comercial</td>
+                              <td>(61) 0000-0000</td>
+                              <td><button type="button" class="btn btn-rounded btn-inline btn-danger-outline btn-sm"><i class="fa fa-times" aria-hidden="true"></i></button></td>
+                            </tr>
+                            </tbody>
+                          </table>
+                        </div>
                       </div>
-                    </div>
-                    <div class="col-sm-5">
-                      <label class="form-label semibold" for="">Telefones cadastrados</label>
-                      <table class="table">
-                        <thead>
-                        <tr>
-                          <th>Tipo</th>
-                          <th>Número</th>
-                        </tr>
-                        </thead>
-                        <tbody>
-                        <tr>
-                          <td>Principal</td>
-                          <td>(61) 0000-0000</td>
-                        </tr>
-                        <tr>
-                          <td>Comercial</td>
-                          <td>(61) 0000-0000</td>
-                        </tr>
-                        </tbody>
-                      </table>
                     </div>
                   </div>
                 </div>
               </section>
+
 
               <div class="row divider-top pb-md">
                 <div class="col-sm-12">
@@ -528,31 +544,48 @@
                 <p>Ana Souza Martins</p>
               </div>
             </div>
-            <div class="row mt-md">
-              <div class="col-sm-12">
-                <label class="form-label semibold" for="">Telefones cadastrados</label>
-                <table class="table mt-md">
-                  <thead>
-                  <tr>
-                    <th>Tipo</th>
-                    <th>Número</th>
-                  </tr>
-                  </thead>
-                  <tbody>
-                  <tr>
-                    <td>Principal</td>
-                    <td>(61) 3442-5757</td>
-                  </tr>
-                  <tr>
-                    <td>Comercial</td>
-                    <td>(61) 3442-5757</td>
-                  </tr>
-                  </tbody>
-                </table>
-              </div>
-            </div>
           </div>
         </section>
+
+        <div class="row mt-md">
+          <div class="col-sm-12">
+            <section class="box-typical">
+              <header class="box-typical-header header-bordered">
+                <div class="tbl-row">
+                  <div class="tbl-cell tbl-cell-title">
+                    <h5 class="semibold"><i class="fa fa-phone" aria-hidden="true"></i> Telefones
+                    </h5>
+                  </div>
+                </div>
+              </header>
+              <div class="card-block">
+                <div class="table-responsive">
+                  <table class="table mt-md">
+                    <thead>
+                    <tr>
+                      <th>Tipo</th>
+                      <th>Número</th>
+
+                    </tr>
+                    </thead>
+                    <tbody>
+                    <tr>
+                      <td>Principal</td>
+                      <td>(61) 3442-5757</td>
+
+                    </tr>
+                    <tr>
+                      <td>Comercial</td>
+                      <td>(61) 3442-5757</td>
+
+                    </tr>
+                    </tbody>
+                  </table>
+                </div>
+              </div>
+            </section>
+          </div>
+        </div>
 
 
       </div>
