--- a/pages/posto/unidade--editar.html
+++ b/pages/posto/unidade--editar.html
@@ -189,70 +189,53 @@
                       </select>
                     </div>
                   </div>
-                  <div class="row mt-md">
-                    <div class="col-sm-7">
-                      <div class="row">
-                        <div class="col-sm-12 mb-md">
-                          <label class="form-label semibold" for=""><i class="fa fa-phone mr-xs" aria-hidden="true"></i>
-                            Telefones</label>
-                        </div>
-                        <div class="col-sm-5">
-                          <label class="form-label semibold" for="">Tipo</label>
-                          <select class="select2 select2-arrow">
-                            <option>Selecione</option>
-                            <option>Principal</option>
-                            <option>Comercial</option>
-                            <option>Outros</option>
-                          </select>
-                        </div>
-                        <div class="col-sm-7">
-                          <label class="form-label semibold" for="">Número</label>
-                          <div class="input-group">
-                            <input type="number" class="form-control" placeholder="Número">
-                        <span class="input-group-btn">
-                          <button class="btn btn-success-outline" type="button"><i class="fa fa-plus"
-                                                                                   aria-hidden="true"></i>
-                          </button>
-                        </span>
-                          </div>
-                        </div>
-                      </div>
-                    </div>
-                    <div class="col-sm-5">
-                      <label class="form-label semibold" for="">Telefones cadastrados</label>
-                      <table class="table">
-                        <thead>
-                        <tr>
-                          <th>Tipo</th>
-                          <th>Número</th>
-                          <th></th>
-                        </tr>
-                        </thead>
-                        <tbody>
-                        <tr>
-                          <td>Principal</td>
-                          <td>(61) 0000-0000</td>
-                          <th>
-                            <button type="button" class="btn btn-danger-outline btn-sm"><i
-                                    class="fa fa-times"
-                                    aria-hidden="true"></i></button>
-                          </th>
-                        </tr>
-                        <tr>
-                          <td>Comercial</td>
-                          <td>(61) 0000-0000</td>
-                          <th>
-                            <button type="button" class="btn btn-danger-outline btn-sm"><i
-                                    class="fa fa-times"
-                                    aria-hidden="true"></i></button>
-                          </th>
-                        </tr>
-                        </tbody>
-                      </table>
-                    </div>
-                  </div>
                 </div>
               </section>
+
+
+
+              <div class="row mt-md">
+                <div class="col-sm-12">
+                  <section class="box-typical">
+                    <header class="box-typical-header header-bordered">
+                      <div class="tbl-row">
+                        <div class="tbl-cell tbl-cell-title">
+                          <h5 class="semibold"><i class="fa fa-phone" aria-hidden="true"></i> Telefones
+                          </h5>
+                        </div>
+                      </div>
+                    </header>
+                    <div class="card-block">
+                      <div class="table-responsive">
+                        <table class="table mt-md">
+                          <thead>
+                          <tr>
+                            <th>Tipo</th>
+                            <th>Número</th>
+                            <th></th>
+                          </tr>
+                          </thead>
+                          <tbody>
+                          <tr>
+                            <td>Principal</td>
+                            <td>(61) 3442-5757</td>
+                            <td><button type="button" class="btn btn-rounded btn-inline btn-danger-outline btn-sm"><i class="fa fa-times" aria-hidden="true"></i></button></td>
+                          </tr>
+                          <tr>
+                            <td>Comercial</td>
+                            <td>(61) 3442-5757</td>
+                            <td><button type="button" class="btn btn-rounded btn-inline btn-danger-outline btn-sm"><i class="fa fa-times" aria-hidden="true"></i></button></td>
+                          </tr>
+                          </tbody>
+                        </table>
+                      </div>
+                    </div>
+                  </section>
+                </div>
+              </div>
+
+
+
 
               <div class="row divider-top pb-md">
                 <div class="col-sm-12">
@@ -275,136 +258,6 @@
   </div><!--.container-fluid-->
 </div><!--.page-content-->
 
-
-<!-- Modal detalha posto -->
-<div class="modal fade" id="ModalDetalhaUnidade" tabindex="-1" role="dialog" aria-labelledby="ModalDetalhaUnidade">
-  <div class="modal-dialog modal-lg" role="document">
-    <div class="modal-content">
-      <div class="modal-header">
-        <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span
-                aria-hidden="true">&times;</span></button>
-        <h4 class="modal-title">Detalhes da unidade</h4>
-      </div>
-      <div class="modal-body">
-
-
-        <section class="card card-default mt-md">
-          <header class="card-header">
-            <h5 class="semibold"><i class="fa fa-building-o mr-xs" aria-hidden="true"></i> Dados do posto
-            </h5>
-          </header>
-          <div class="card-block">
-            <div class="row">
-              <div class="col-sm-4">
-                <label class="form-label semibold" for="">Unidade</label>
-                <p>Asa sul</p>
-              </div>
-              <div class="col-sm-4">
-                <label class="form-label semibold" for="">CNPJ</label>
-                <p>000.000.000/0000-00</p>
-              </div>
-              <div class="col-sm-4">
-                <label class="form-label semibold" for="">Centro de custo</label>
-                <p>Centro de custo</p>
-              </div>
-            </div>
-          </div>
-        </section>
-
-
-        <section class="card card-default mt-md">
-          <header class="card-header">
-            <h5 class="semibold"><i class="fa fa-map-marker mr-xs" aria-hidden="true"></i> Localização do posto
-            </h5>
-          </header>
-          <div class="card-block">
-            <div class="row">
-              <div class="col-sm-6">
-                <label class="form-label semibold" for="">Endereço</label>
-                <p>Avenida Maria Teresa, quadra 43, rua antonieta, 1646</p>
-              </div>
-              <div class="col-sm-3">
-                <label class="form-label semibold" for="">Número</label>
-                <p>1289</p>
-              </div>
-              <div class="col-sm-3">
-                <label class="form-label semibold" for="">Complemento</label>
-                <p>Alameda 303</p>
-              </div>
-            </div>
-            <div class="row mt-md">
-              <div class="col-sm-3">
-                <label class="form-label semibold" for="">Bairro</label>
-                <p>Asa sul</p>
-              </div>
-              <div class="col-sm-3">
-                <label class="form-label semibold" for="">Cidade</label>
-                <p>Brasília</p>
-              </div>
-              <div class="col-sm-3">
-                <label class="form-label semibold" for="">UF</label>
-                <p>Distrito Federal</p>
-              </div>
-              <div class="col-sm-3">
-                <label class="form-label semibold" for="">CEP</label>
-                <p>00000-000</p>
-              </div>
-            </div>
-          </div>
-        </section>
-
-        <section class="card card-default mt-lg">
-          <header class="card-header">
-            <h5 class="semibold"><i class="fa fa-commenting mr-xs" aria-hidden="true"></i> Contatos
-            </h5>
-          </header>
-          <div class="card-block">
-            <div class="row">
-              <div class="col-sm-6">
-                <label class="form-label semibold" for="">Responsável pedagógico</label>
-                <p>Rodrigo Sousa Martins</p>
-              </div>
-              <div class="col-sm-6">
-                <label class="form-label semibold" for="">Interessados</label>
-                <p>Luan Almeida Barbosa</p>
-                <p>Otávio Goncalves Souza</p>
-                <p>Ana Souza Martins</p>
-              </div>
-            </div>
-            <div class="row mt-md">
-              <div class="col-sm-12">
-                <label class="form-label semibold" for="">Telefones cadastrados</label>
-                <table class="table mt-md">
-                  <thead>
-                  <tr>
-                    <th>Tipo</th>
-                    <th>Número</th>
-                  </tr>
-                  </thead>
-                  <tbody>
-                  <tr>
-                    <td>Principal</td>
-                    <td>(61) 0000-0000</td>
-                  </tr>
-                  <tr>
-                    <td>Comercial</td>
-                    <td>(61) 0000-0000</td>
-                  </tr>
-                  </tbody>
-                </table>
-              </div>
-            </div>
-          </div>
-        </section>
-
-
-      </div>
-      <div class="modal-footer">
-        <button type="button" class="btn btn-primary" data-dismiss="modal">Ok</button>
-      </div>
-    </div>
-  </div>
-</div>
 
 
 <script src="../../js/lib/jquery/jquery.min.js"></script>
