--- a/pages/academico/cursos.html
+++ b/pages/academico/cursos.html
@@ -477,7 +477,7 @@
                           </tr>
                           </thead>
                           <tbody>
-                          <tr class="table-active-next">
+                          <tr class="table-active-next" data-toggle="tooltip" data-placement="top" title="Próximo valor vigente">
                             <td>00/00/0000</td>
                             <td>00/00/0000</td>
                             <td>Ativo</td>
@@ -502,7 +502,7 @@
                               </div>
                             </td>
                           </tr>
-                          <tr class="table-active-visual">
+                          <tr class="table-active-visual" data-toggle="tooltip" data-placement="top" title="Valor vigente">
                             <td>00/00/0000</td>
                             <td>00/00/0000</td>
                             <td>Ativo</td>
@@ -527,7 +527,7 @@
                               </div>
                             </td>
                           </tr>
-                          <tr class="table-inactive">
+                          <tr class="table-inactive" data-toggle="tooltip" data-placement="top" title="Valor inativo">
                             <td>00/00/0000</td>
                             <td>00/00/0000</td>
                             <td>Ativo</td>
